--- a/app/views/refinery/_email_template.html.erb
+++ b/app/views/refinery/_email_template.html.erb
@@ -65,7 +65,7 @@
                                 <tbody>
                                   <tr>
                                     <td class="mcnImageContent" valign="top" style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0;">
-                                      <!--<img align="left" alt="" src="http://glasscanvas.s3.amazonaws.com/lifecollective-banner.jpg" width="600" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; -webkit-border-top-right-radius: 5px; -webkit-border-top-left-radius: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-topleft: 5px; border-top-right-radius: 5px; border-top-left-radius: 5px;" class="mcnImage">-->
+                                      <img align="left" alt="" src="http://glasscanvas.s3.amazonaws.com/elephant/elephant-banner.jpg" width="600" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; -webkit-border-top-right-radius: 5px; -webkit-border-top-left-radius: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-topleft: 5px; border-top-right-radius: 5px; border-top-left-radius: 5px;" class="mcnImage">
                                      </td>
                                   </tr>
                                 </tbody>
