--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -73,6 +73,12 @@
       }
     }
   }
+  .inline-editable-image-container{
+    .progress{
+      max-width: 300px;
+      left: 0;
+    }
+  }
 }
 
 
