--- a/app/views/glass/_browser_update.html.erb
+++ b/app/views/glass/_browser_update.html.erb
@@ -12,10 +12,10 @@
         <a href="http://support.apple.com/downloads/#safari" class="browser-download" target="_blank"><img src="https://glasscanvas.s3.amazonaws.com/safari-logo.png" class="browser-logo img-responsive"/>Safari</a>
       </div>
       <div class="col-sm-4">
-        <a href="https://www.mozilla.org/en-US/firefox/new/" class="browser-download" target="_blank"><img src="https://glasscanvas.s3.amazonaws.com/firefox-logo.png" class="browser-logo img-responsive"/>Firefox</a>
+        <a href="http://www.mozilla.org/en-US/firefox/new/" class="browser-download" target="_blank"><img src="https://glasscanvas.s3.amazonaws.com/firefox-logo.png" class="browser-logo img-responsive"/>Firefox</a>
       </div>
       <div class="col-sm-12 ie-disclaimer">
-        <p>If for some reason you really need to use Internet Explorer please use <a href="https://windows.microsoft.com/en-ca/internet-explorer/ie-11-worldwide-languages">IE 11</a>.</p>
+        <p>If for some reason you really need to use Internet Explorer please use <a href="http://windows.microsoft.com/en-ca/internet-explorer/ie-11-worldwide-languages">IE 11</a>.</p>
       </div>
     </div>
   </div>
