--- a/app/views/refinery/admin/users/index.html.erb
+++ b/app/views/refinery/admin/users/index.html.erb
@@ -8,8 +8,8 @@
           <% if ::Refinery::Admin::UsersController.searchable? %>
             <%= render '/refinery/admin/search', :url => refinery.admin_users_path %>
           <% end %>
-          <a href="<%= refinery.new_admin_user_path %>" class="btn btn-link-grey">
-            <i class="gcicon gcicon-add"></i> <span class="hidden-xs"><strong>Add user</strong></span>
+          <a href="<%= refinery.new_admin_user_path %>" class="btn btn-primary">
+            <i class="gcicon gcicon-add"></i> <span class="hidden-xs"><strong>New user</strong></span>
           </a>
         </div>
       </div>
