--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -841,7 +841,7 @@ body{
     margin-right: 7px;
     margin-left: 7px;
   }
-  &> .btn{
+  &> .btn, &> .dropdown{
     &:last-child{
       margin-left: auto;
       margin-right: 0;
