--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/settings/_notification_recipients_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/settings/_notification_recipients_form.html.erb
@@ -4,7 +4,7 @@
     <span class='label_with_help'>
       <%%= f.label :value, t('.settings_value_name') %>
     </span>
-    <%%= f.text_field :value, :value => @setting.value, :class => "larger widest" %>
+    <%%= f.text_field :value, :value => @setting.value, :class => "form-control" %>
   </div>
 
   <p>
