image uploader updated so that on 100% progress bar updates to "Processing..."

--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -127,6 +127,9 @@
   display: block;
   width: 1%;
 }
+.progress-bar-striped {
+  background-repeat-x: initial;
+}
 .image-upload-container {
 	height: 0px;
 }
