--- a/app/views/refinery/admin/pages/_form_new_page_parts.html.erb
+++ b/app/views/refinery/admin/pages/_form_new_page_parts.html.erb
@@ -1,7 +1,7 @@
 <div id='new_page_part_dialog' style='display: none'>
   <div class='field'>
     <label for='new_page_part_title'><%= t('.title')  %></label>
-    <input id='new_page_part_title' value='' class='larger widest' />
+    <input id='new_page_part_title' value='' class='form-control' />
     <input id='new_page_part_index' type='hidden' value='<%= @page.parts.size %>' />
   </div>
   <%= render '/refinery/admin/form_actions', :f => f,
