file-preview display !important removed

--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -70,7 +70,7 @@
 	}
   .file-preview{
     border-radius: $radius;
-    display: block !important;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
