with_query replaced with find_with_index

--- a/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/controllers/refinery/namespace/admin/plural_name_controller.rb.erb
@@ -112,7 +112,7 @@ module Refinery
           find_all_<%= plural_name %>('')
 
           # Now get weighted results by running the query against the results already found.
-          @<%= plural_name %> = @<%= plural_name %>.with_query('^' + params[:search].split.join(' ^'))
+          @<%= plural_name %> = @<%= plural_name %>.find_with_index(params[:search])
         end
       end
     end
