Use common modal html - JS adjusts the modal text

--- a/app/assets/stylesheets/glass/partials/layout/_pages.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_pages.scss
@@ -387,3 +387,9 @@
     }
   }
 }
+.modal {
+  .form-actions, .deliver, .image-delete-btn {
+    /* Actions are handled by modal buttons.. remove the default ones */
+    display: none;
+  }
+}
