--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -1,3 +1,5 @@
+<%= render 'refinery/admin/pages/addons/page' %>
+
 <%
   editable = true
   if !current_refinery_user.has_role?(:superuser) && page.respond_to?(:editable)
@@ -12,7 +14,6 @@
         <a class="child-toggle" data-toggle="collapse" href="#<%= dom_id(page) -%>_children">
           <i class="status-icon gcicon gcicon-folder-open"></i>
           <i class="status-icon gcicon gcicon-folder"></i>
-        </a>
       <% else %>
         <i class="status-icon gcicon gcicon-folder toggle"></i>
       <% end %>
@@ -25,6 +26,9 @@
       <span class='title'>
         <%= page_title_with_translations page %>
         <%= page_meta_information page %>
+        <% if content_for?(:additional_labels) %>
+          <%= yield :additional_labels %>
+        <% end %>
       </span>
       <% if Refinery::I18n.frontend_locales.many? %>
         <span class='locales'>
