fixed newline to .

--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -2,8 +2,7 @@
 	<section id='admin-page-content' class='admin-index container-fluid'>
     <div class="row">
       <div class="col-sm-12">
-        <h2 class="admin-title"><%%= t('refinery
-plugins.<%= plural_name %>.title') %></h2>
+        <h2 class="admin-title"><%%= t('refinery.plugins.<%= plural_name %>.title') %></h2>
         <div class="contextual-menu">
           <!-- FILTERING -->
           <!--
