commented out previous imports for cropper.

--- a/app/assets/stylesheets/glass/_manifest-backend.scss
+++ b/app/assets/stylesheets/glass/_manifest-backend.scss
@@ -9,8 +9,8 @@
 /* @import "canvas/jquery-ui.structure"; */
 
 // Canvas
-@import "canvas/cropper";
-@import "canvas/image_cropping";
+// @import "canvas/cropper";
+// @import "canvas/image_cropping";
 
 // Glass
 @import "glass/partials/layout/editor";
