--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -23,7 +23,7 @@ a:hover, a:focus{
 }
 
 a:focus{
-  outline: 0;
+  outline: 0 !important;
 }
 
 a:active{
@@ -1089,6 +1089,7 @@ form{
 .icon-last{
   .icon, .gcicon{
     margin-left: 10px !important;
+    margin-right: 0 !important;
   }
 }
 
@@ -1140,7 +1141,7 @@ form{
 
 input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[type="select"]:focus, .dropdown-wrapper select:focus{
   border-color: $primary-hover !important;
-  outline: 0;
+  outline: 0 !important;
   @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.3));
 }
 
@@ -1314,13 +1315,13 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 button{
   &:active{
 		@include box-shadow(none);
-		outline: 0;
+		outline: 0 !important;
 	}
   &:focus{
-		outline: 0;
+		outline: 0 !important;
 	}
 	&:active:focus{
-  	outline: 0;
+  	outline: 0 !important;
 	}
 }
 
@@ -1335,13 +1336,13 @@ button{
 	border: none;
 	&:active{
 		@include box-shadow(none);
-		outline: 0;
+		outline: 0 !important;
 	}
 	&:focus{
-		outline: 0;
+		outline: 0 !important;
 	}
 	&:active:focus{
-  	outline: 0;
+  	outline: 0 !important;
 	}
 	&:disabled{
   	cursor: not-allowed;
