--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -35,9 +35,10 @@ button{
 	border: none;
 	padding: 0;
 	color: $primary-color;
-	text-decoration: none;
+	text-decoration: none !important;
 	&:hover, &:focus{
 		color: $primary-hover;
+		text-decoration: none !important;
 	}
 }
 
@@ -575,6 +576,7 @@ p::-moz-selection {
   @include transition($transition ease-out);
   color: $black;
   font-size: 18px;
+  line-height: 1;
   border: 1px solid $grey-3;
   display: inline-block;
   .icon{
@@ -582,6 +584,7 @@ p::-moz-selection {
     line-height: 1;
     margin: 0 2px 0 0;
     left: -5px;
+    top: -1px;
   }
   .icon-last{
     margin: 0 0 0 2px;
@@ -591,6 +594,7 @@ p::-moz-selection {
     font-size: 24px;
     color: #aeaeae;
     left: 2px;
+    top: 2px;
     margin-left: 2px;
     display: inline-block;
     padding-bottom: 3px;
@@ -661,9 +665,11 @@ a.pill{
   span{
     transform: rotate(45deg);
     display: block;
-    top: 1px;
+    top: 6px;
     position: absolute;
-    right: 3px;
+    right: 2px;
+    width: 22px;
+    text-align: center;
     text-transform: uppercase;
     font-size: 10px;
     font-weight: 600;
