--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -14,6 +14,7 @@ body{
 #wrapper{
   background: lighten($off-white, 2%) !important;
   padding: 0;
+  overflow: hidden;
 }
 
 .container-fluid{
@@ -506,6 +507,11 @@ body{
       }
       .page-title{
         margin-bottom: 0;
+      }
+      .form-group{
+        label{
+          margin: 0;
+        }
       }
     }
     .sidebar-section-body{
