Fix malformed html (extra closing </div>)

--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
@@ -85,8 +85,9 @@
     <%% end # form_for -%>
 
   </div>
+<% if !include_live_editor? -%>
 </div>
-
+<% end -%>
 <% if has_image_attribute %>
   <%%= render 'refinery/admin/images/form' -%>
 <% end %>
