--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -1,7 +1,9 @@
 #image-upload-form {
   position: absolute;
-  right: -1200px;
+  top: -1200px;
 	opacity: 0;
+  height: 1px;
+  overflow: hidden;
 }
 
 .upload-preview-container {
