--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -2,6 +2,9 @@
 
 [contenteditable=true]:empty,
 [contenteditable=true] .empty{
+  /* NOTE: this 'display: block;' allows the user to click on an empty spot, but often throws the page alignment off... */
+  /* NOTE: ... I'm open to suggestions! [SS] */
+  display: block;
   &:before{
     content: attr(glass-placeholder);
     display: block; /* For Firefox */
