--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -723,6 +723,21 @@ a.pill{
   margin-bottom: 60px;
 }
 
+
+.image-group{
+  margin: 30px -15px;
+}
+
+.inline-module{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.inline-editable-image-container{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .caption-lg{
   font-size: 21px;
   font-weight: 600;
@@ -1145,7 +1160,7 @@ form{
    line-height: 1.6;
 }
 
-input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[type="select"]:focus, .dropdown-wrapper select:focus{
+input:not([type="checkbox"]):focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[type="select"]:focus, .dropdown-wrapper select:focus{
   border-color: $primary-hover !important;
   outline: 0 !important;
   @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.3));
