--- a/app/assets/stylesheets/glass/partials/components/_grande-menu.scss
+++ b/app/assets/stylesheets/glass/partials/components/_grande-menu.scss
@@ -84,7 +84,7 @@
   display: flex;
   justify-content: space-around;
   button{
-    padding: 5px;
+    padding: 5px 5px 8px;
     height: 40px;
     white-space: nowrap;
     color: $grey-6;
