--- a/app/assets/stylesheets/glass/partials/components/_icons.scss
+++ b/app/assets/stylesheets/glass/partials/components/_icons.scss
@@ -244,3 +244,12 @@
 .gcicon-unlink:before {
   content: "?";
 }
+.gcicon-img-fw:before {
+  content: "B";
+}
+.gcicon-img-lg:before {
+  content: "@";
+}
+.gcicon-img-md:before {
+  content: "[";
+}
