--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -135,3 +135,85 @@
     }
   }
 }
+
+.inline-module{
+  &-fw{
+    width: 100vw;
+    transform: translateX(-50vw);
+    left: 50%;
+    .img-responsive{
+      width: 100%;
+    }
+  }
+  &-lg{
+    @media (min-width: 768px) {
+      width: calc(100% + 200px);
+      margin-left: -100px;
+    }
+  }
+}
+
+.image-group{
+  &.active{
+    display: flex;
+    flex-wrap: wrap;
+    .inline-editable-image-container{
+      .img-layout{
+        display: none;
+      }
+    }
+  }
+  .inline-editable-image-container{
+    flex: 1;
+    margin: 0 15px;
+  }
+}
+
+.link-items{
+  width: 20px !important;
+  height: 20px !important;
+  position: absolute;
+  z-index: 100;
+  .gcicon{
+    font-size: 10px;
+    top: -4px;
+  }
+  &.link{
+    left: 50%;
+    bottom: -25px;
+    margin-left: -10px;
+  }
+  &.unlink{
+    left: 100%;
+    top: 50%;
+    margin: -10px 0 0 5px;
+  }
+}
+
+.inline-module{
+  &:hover{
+    .module-layout{
+      opacity: 1 !important;
+    }
+  }
+  .module-layout{
+    top: 15px;
+    left: 15px;
+    position: absolute;
+    opacity: 0;
+    transition: .2s ease-out;
+    z-index: 50;
+    button{
+      background: $white;
+      border-color: $white;
+      color: $grey-6;
+      margin-right: 5px;
+      transition: .2s ease-out;
+      &:hover{
+        background: $primary-hover;
+        border-color: $primary-color;
+        color: $white;
+      }
+    }
+  }
+}
