Remove references to Elephant & the admin dashboard

--- a/app/views/refinery/layouts/login.html.erb
+++ b/app/views/refinery/layouts/login.html.erb
@@ -17,8 +17,7 @@
         </div>
         <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
           <div class="text-center margin-bottom-md">
-            <%= render "/refinery/svg/elephant" %>
-            <h2>Elephant CMS</h2>
+            <h2>Refinery CMS</h2>
           </div>
           <%= yield %>
         </div>
