--- a/app/views/glass/_head.html.erb
+++ b/app/views/glass/_head.html.erb
@@ -2,7 +2,7 @@
 
 <% if admin %>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Elephant - <%= Refinery::Core.site_name -%></title>
+  <title>Refinery - <%= Refinery::Core.site_name -%></title>
   <%= csrf_meta_tags %>
 <% else %>
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
