--- a/app/views/refinery/admin/glass/_modal.html.erb
+++ b/app/views/refinery/admin/glass/_modal.html.erb
@@ -1,5 +1,5 @@
 <div id="sub-form-modal" class="ui standard modal" tabindex="-1" role="dialog" aria-labelledby="subFormModal" aria-hidden="true">
-  <i class="close icon"></i>
+  <i class="gcicon gcicon-close close"></i>
   <div class="header">
     Modal Title (overwritten by JS)
   </div>
