--- a/app/views/refinery/inquiries/admin/inquiries/index.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/index.html.erb
@@ -52,7 +52,7 @@
 </section>
 
   <div id="inquiry-form-modal" class="ui modal large form-modal">
-    <i class="close icon"></i>
+    <i class="gcicon gcicon-close close"></i>
     <div class="header">
 
     </div>
