--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -83,7 +83,7 @@
             </div>
 
             <div id="notification-modal" class="ui standard modal">
-              <i class="close icon"></i>
+              <i class="gcicon gcicon-close close"></i>
               <div class="header">
                 Who should be notified?
               </div>
@@ -104,7 +104,7 @@
             </div>
 
             <div id="response-email-modal" class="ui standard modal">
-              <i class="close icon"></i>
+              <i class="gcicon gcicon-close close"></i>
               <div class="header">
                 Response Email
               </div>
