--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1274,38 +1274,41 @@ input:not([type="checkbox"]):focus, .form-control:focus, input[type="submit"]:fo
   padding: 5px;
 }
 
-.select-options .optgroup ul a { padding-left: 30px; }
+.select-options .optgroup ul a {
+  padding-left: 30px;
+}
 
-
-.placeholder-labels{
-  .form-control{
-    &:focus{
-      &::placeholder, :-moz-placeholder{
-        top: -25px;
-        visibility: visible !important;
-        font-size: 14px;
-        transition: .15s ease-out;
-      }  
-      &::shadow{
-        top: 15px;
-        background: red;
+html:not(.mozilla){
+  .placeholder-labels{
+    .form-control{
+      &:focus{
+        &::-webkit-input-placeholder, ::-moz-placeholder{
+          top: -25px;
+          visibility: visible !important;
+          font-size: 14px;
+          transition: .15s ease-out;
+        }  
+        &::shadow{
+          top: 15px;
+          background: red;
+        }
+      }
+      &::-webkit-input-placeholder, ::-moz-placeholder{
+        position: relative;
+        transition: 0s ease-out;
+        top: 0;
       }
     }
-    &::placeholder, :-moz-placeholder{
-      position: relative;
-      transition: 0s ease-out;
-      top: 0;
+    .input-lg{
+      &:focus{
+        height: 68px;
+        padding-top: 25px;
+      }
     }
-  }
-  .input-lg{
-    &:focus{
-      height: 68px;
-      padding-top: 25px;
-    }
-  }
-  textarea{
-    &:focus{
-      padding-top: 30px;
+    textarea{
+      &:focus{
+        padding-top: 30px;
+      }
     }
   }
 }
