--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1278,7 +1278,7 @@ input:not([type="checkbox"]):focus, .form-control:focus, input[type="submit"]:fo
   padding-left: 30px;
 }
 
-html:not(.mozilla){
+body:not(.mozilla){
   .placeholder-labels{
     .form-control{
       &:focus{
