--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -29,6 +29,11 @@
           <%= f.label :slugify_title %>
         </div>
         <div class="sidebar-section-heading">
+<!--
+          <button class="link-url circle-icon circle-icon-sm circle-icon-white btn-toggle-icons">
+            <i class="gcicon gcicon-link"></i><i class="gcicon gcicon-unlink"></i>
+          </button>
+-->
           <div class="url">
             <span id="domain-name"></span><%= parent_slug %>/<span
               class="slug glass-edit"
