--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1631,23 +1631,50 @@ button{
 }
 
 .btn-toggle-icons{
-  .icon{
+  white-space: nowrap;
+  .icon, .gcicon{
     margin: 0 !important;
+    width: 22px;
+    height: 22px;
     &:first-child{
-      display: inline;
+      opacity: 1;
 
     }
     &:last-child{
-      display: none;
+      opacity: 0;
+      margin-left: -22px !important
+    }
+    transition: .15s cubic-bezier(.4,0,.2,1)
+  }
+  &:hover{
+    .icon, .gcicon{
+      transform: rotate(360deg);
+      &:first-child{
+        opacity: 0;
+      }
+      &:last-child{
+        opacity: 1;
+      }
     }
   }
   &.toggled{
-    .icon{
+    .icon, .gcicon{
       &:first-child{
-        display: none;
+        opacity: 0;
         }
       &:last-child{
-        display: inline;
+        opacity: 1;
+      }
+    }
+    &:hover{
+      .icon, .gcicon{
+        transform: rotate(360deg);
+        &:first-child{
+          opacity: 1;
+        }
+        &:last-child{
+          opacity: 0;
+        }
       }
     }
   }
