--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1286,11 +1286,10 @@ input:not([type="checkbox"]):focus, .form-control:focus, input[type="submit"]:fo
   padding-left: 30px;
 }
 
-body:not(.mozilla){
   .placeholder-labels{
     .form-control{
       &:focus{
-        &::-webkit-input-placeholder, ::-moz-placeholder{
+        &::-webkit-input-placeholder{
           top: -25px;
           visibility: visible !important;
           font-size: 14px;
@@ -1301,7 +1300,7 @@ body:not(.mozilla){
           background: red;
         }
       }
-      &::-webkit-input-placeholder, ::-moz-placeholder{
+      &::-webkit-input-placeholder{
         position: relative;
         transition: 0s ease-out;
         top: 0;
@@ -1319,7 +1318,7 @@ body:not(.mozilla){
       }
     }
   }
-}
+
 
 .validation{
   background: $red;
