--- a/app/assets/stylesheets/canvas/config/_base-variables.scss
+++ b/app/assets/stylesheets/canvas/config/_base-variables.scss
@@ -23,7 +23,7 @@ $grey-8: #2c2c2c;
 $grey-9: #1f1f1f;
 $beige: #e1dcd9;
 $brown: #8c8987;
-$red: #a94442;
+$red: #e94d4d;
 $red-fade: #bf4d4b;
 $red-bg: #ffdfcf;
 $green: #5bc890;
