--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1175,9 +1175,9 @@ form{
 }
 
 input:not([type="checkbox"]):focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[type="select"]:focus, .dropdown-wrapper select:focus{
-  border-color: $primary-hover !important;
+  border-color: $grey-4 !important;
   outline: 0 !important;
-  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.3));
+  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($grey-6,0.15));
 }
 
 .btn-link:focus, .btn-link-grey:focus{
