--- a/app/assets/stylesheets/canvas/config/_base-variables.scss
+++ b/app/assets/stylesheets/canvas/config/_base-variables.scss
@@ -43,7 +43,7 @@ $margin-half: $margin / 2;
 $margin-double: $margin * 2;
 $shadow: 0px 1px 4px 0px rgba(50, 50, 50, 0.1);
 $shadow-solid: inset 0px -2px 0px 0px rgba(50, 50, 50, 0.25);
-$transition: 0.2s;
+$transition: .2s;
 $bezier: cubic-bezier(0,.5,.5,1);
 $flip: -1, 1;
 $flip-vertical: 1, -1;
