--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1297,9 +1297,9 @@ body:not(.mozilla){
     .form-control{
       &:focus{
         &::-webkit-input-placeholder{
-          top: -25px;
+          top: -20px;
           visibility: visible !important;
-          font-size: 14px;
+          font-size: 12px;
           transition: .15s ease-out;
         }  
         &::shadow{
@@ -1315,8 +1315,10 @@ body:not(.mozilla){
     }
     .input-lg{
       &:focus{
-        height: 68px;
         padding-top: 25px;
+      }
+      &[type="text"]{
+        height: 68px;
       }
     }
     textarea{
