--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -144,6 +144,10 @@ a:active{
 	display: inline-block;
 }
 
+.static{
+  position: static;
+}
+
 .inner-wrapper{
   position: absolute;
   top: 0;
@@ -1084,6 +1088,10 @@ form{
 .form-group{
   .form-control, textarea{
 	  @include border-radius($radius);
+	  &:hover{
+  	    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($grey-6,0.1));
+
+	  }
   }
   .btn{
 	  @include border-radius($radius);
@@ -1197,10 +1205,16 @@ form{
    line-height: 1.6;
 }
 
-input:not([type="checkbox"]):focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[type="select"]:focus, .dropdown-wrapper select:focus{
+input:not([type="checkbox"]):focus, .form-control:focus, input[type="select"]:focus, .dropdown-wrapper select:focus{
   border-color: $grey-4 !important;
   outline: 0 !important;
   @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($grey-6,0.15));
+}
+
+.btn:focus, input[type="submit"]:focus{
+  border-color: $primary-hover !important;
+  outline: 0 !important;
+  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.25));
 }
 
 .btn-link:focus, .btn-link-grey:focus{
@@ -1675,6 +1689,18 @@ button{
 	background: white;
 	cursor: inherit;
 	display: block;
+}
+
+.btn-rotate{
+  -webkit-transform: translateZ(0);
+  .icon, .gcicon{
+    transition: .15s $bezier;  
+  }
+  &:hover{
+    .icon, .gcicon{
+      transform: rotate(360deg);
+    }
+  }
 }
 
 .btn-toggle-icons{
