--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -257,6 +257,9 @@ body{
           border-color: $primary-dark;
         }
       }
+      .article-title{
+        width: 100%;
+      }
       .deliver{
         margin-bottom: 15px;
         display: block;
@@ -487,6 +490,12 @@ body{
     &:last-child{
       border: 0;
     }
+    .validation{
+      bottom: 0;
+      margin: 0;
+      border-radius: 0;
+      padding-top: 3px;
+    }
     .collapse-toggle{
       .gcicon-down{
         transition: .2s ease-out;
@@ -512,6 +521,9 @@ body{
         font-size: 21px;
         color: $grey-5;
         font-weight: 500;
+      }
+      p{
+        margin-bottom: 0;
       }
       .page-title{
         margin-bottom: 0;
@@ -701,6 +713,7 @@ body{
   }
   .gcicon-cancel{
     top: -1px;
+    font-size: 14px;
   }
 }
 
@@ -1016,7 +1029,6 @@ body{
 .reordering{
   .page-row{
     &:hover{
-      
     }
     .actions{
       display: none !important;
