--- a/app/assets/stylesheets/glass/partials/layout/_pages.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_pages.scss
@@ -250,6 +250,9 @@
               border-color: $primary-dark;
               background: $primary-dark;
             }
+            .gcicon-cancel{
+              font-size: 14px;
+            }
           } 
           @media (min-width: 768px) {
             .circle-icon{
